# slack-webhook

./: README.md  slack-webhook.cabal  stack.yaml
src/Network/Slack/: Webhook.hs
test/: Spec.hs
