name:                slack-webhook
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/shokohara/slack-webhook#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Slack.Webhook
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , aeson
                     , lens-aeson
                     , bytestring
                     , http-conduit
  default-language:    Haskell2010

test-suite slack-webhook-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , slack-webhook
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shokohara/slack-webhook
